K1J-535: Added performance logging to CSIntegrationService